# esp_bmi270

./: .gitmodules  CMakeLists.txt  README.md  bmi270.c  esp_bmi270.cpp
include/: esp_bmi270.h
